# TrackManage_module-

./: .gitignore  CMakeLists.txt  README.md  bmain.sh  compile_commands.json  main.cpp  readme.md  tgtcore.cpp  tgtcore.h
.github/: .clang-format  copilot-instructions.md
.github/workflows/: ci.yml
config/: config.ini
examples/: management_service_example.cpp
include/: ManagementService.h  ManagementService.hpp  TrackConfig.h  TrackConfig.hpp  TrackManagementAPI.hpp  TrackManager_TEST.hpp  defstruct.h
src/: LatestKBuffer.hpp  ManagementService.cpp  ManagementService.hpp  ManagementServiceImpl.cpp  ManagementServiceImpl.hpp  TrackComm.hpp  TrackManager.cpp  TrackManager.hpp  TrackManager_TEST.cpp  TrackVisualizer.hpp  TrackerComm.cpp  TrackerComm.hpp  TrackerManager.cpp  TrackerManager.hpp  TrackerManagerVisualizer.hpp  TrackerVisualizer.cpp  TrackerVisualizer.hpp  latestKBuffer.hpp  trackManager.cpp  trackManager.hpp  trackmanager_struct.h
tests/: CMakeLists.txt  TrackerManagerDebugger.hpp  test_latestBuffer.cpp  test_trackConfig.cpp  test_trackVisualizer.cpp  test_trackerManager.cpp  test_trackercomm.cpp
utils/: Logger.cpp  Logger.hpp  TcpSender.hpp  UdpBasic.hpp  logger.cpp  logger.hpp  utils.hpp
